--- a/index.html
+++ b/index.html
@@ -19,20 +19,25 @@
   <section class="hero">
     <h1>Revolutionizing Financial Technology</h1>
     <p>PayPilot: Your Co-Pilot for every Payment!</p>
-    <a href="#product" class="cta-button">Explore Product</a>
+    <div class="hero-buttons">
+      <a href="#mvp" class="btn">MVP Version</a>
+      <a href="#mlp" class="btn">MLP Version</a>
+      <a href="#final" class="btn">Final Product</a>
+      <a href="https://play.google.com" class="btn">Download on PlayStore</a>
+    </div>
   </section>
 
   <section id="investors">
     <h2>For Investors</h2>
     <p>Our fintech solution addresses a $500B market opportunity by providing innovative financial management tools that simplify complex processes for both individuals and businesses.</p>
     <p>With our proprietary algorithms and user-centric design, we've achieved a 40% month-over-month growth rate since launch.</p>
-    <a href="link-to-pitch-deck.pdf" class="cta-button">View Pitch Deck</a>
+    <a href="link-to-pitch-deck.pdf" class="btn">View Pitch Deck</a>
   </section>
 
   <section id="sandbox">
     <h2>Try Our Sandbox</h2>
     <p>Experience our platform's capabilities in a risk-free environment. Our sandbox provides a fully functional version of our application with simulated data.</p>
-    <a href="link-to-sandbox" class="cta-button">Launch Sandbox</a>
+    <a href="link-to-sandbox" class="btn">Launch Sandbox</a>
   </section>
 
   <footer>
